[tool.poetry]
name = "pyteal-maybenot"
version = "0.1.0"
description = ""
authors = ["zejoeh <johan@prismatic.fi>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
autoflake = "^1.4"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-xdist = "^3.0.2"

[tool.black]
exclude = "(.venv|migrations)"
target_version = ["py310"]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip = [".venv", "migrations"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
